--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
       <div class="col-md-12">
         <h4>2020</h4>
         <p>Completed Bachelor of Engineering Degree in Computer Engineering</p>
-        <p>Graduated from <span style="bold">G. V. Acharya Institute of Engineering & Technology</span></p>
+        <p>CGPI: 6.84 &emsp;&emsp; Scored 63.85%</p>
+        <p>G. V. Acharya Institute of Engineering & Technology</p>
         <br>
       </div>
       <div class="col-sm-6">
