--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <div class="container-fluid profile" id="profile">
     <div class="row">
       <div class="col-md-4">
-        <img class="photo" id="photo" src="images/photo.png" alt="photo">
+        <img class="photo" id="photo" src="images/profile-pic.png" alt="photo">
       </div>
       <div class="col-md-8">
         <br>
