--- a/index.html
+++ b/index.html
@@ -134,13 +134,17 @@
           <p>CSS</p>
           <p>Bootstrap</p>
           <p>Javascript</p>
-          <p>PHP</p>
+          <p>jQuery</p>
+          <p>Node.js</p>
+          <p>Express.js</p>
+          <p>MongoDB</p>
+          <p>Mongoose</p>
           <br>
         </div>
         <div class="col-sm-4">
           <h4>Other</h4>
           <p>Photoshop</p>
-          <p>Arduino</p>
+          <p>Git</p>
           <br>
         </div>
       </div>
